refactor: toList()로 수정
Jira: S11P31A210-379